# thesistools

./: .gitignore  README.md  pyproject.toml
src/thesistools/: __init__.py  plotting.py  styles_discovery.py  thesis.mplstyle
src/thesistools/styles/: thesis.mplstyle
